fixed correct folder structure and updated links and imports

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/homepage.css" rel="stylesheet" />
+    <link href="/src/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,32 +25,32 @@
       <nav class="homepage-nav">
         <ul>
           <li class="nav-list-item">
-            <a href="index.html"
+            <a href="/"
               ><span class="desktop-homepage-nav">Home</span
               ><i class="fa-thin fa-house nav-icon mobile-icon"></i
             ></a>
           </li>
           <li class="nav-list-item">
-            <a href="products-page.html">
+            <a href="/src/products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
           <li>
-            <a href="shopping-cart.html"
+            <a href="/src/shopping-cart.html"
               ><i class="fa-thin fa-bag-shopping nav-icon"></i
             ></a>
           </li>
           <li>
-            <a href="coming-soon.html"
+            <a href="/src/coming-soon.html"
               ><i class="fa-thin fa-magnifying-glass nav-icon"></i
             ></a>
           </li>
         </ul>
       </nav>
-      <a href="index.html" class="homepage-logo-container"
+      <a href="/" class="homepage-logo-container"
         ><img
-          src="rainydays-images/RainyDays_Logo.png"
+          src="/src/rainydays-images/RainyDays_Logo.png"
           alt="RainyDays logo"
           class="homepage-logo"
       /></a>
@@ -60,7 +59,7 @@
       <section class="sale-container">
         <div class="valentinesday-sale">
           <p class="text-sale">25% off on our Valentines day sale</p>
-          <a href="coming-soon.html" class="sale-button cta">Go to sale</a>
+          <a href="/src/coming-soon.html" class="sale-button cta">Go to sale</a>
         </div>
       </section>
 
@@ -69,23 +68,25 @@
         <div class="product-container">
           <div class="homepage-product-card">
             <img
-              src="rainydays-images/jacket1.jpg"
+              src="/src/rainydays-images/jacket1.jpg"
               alt="red jacket with zipper"
               class="homepage-product-img"
             />
             <h3>Frost Peak</h3>
-            <a href="frost-peak-details.html" class="add-to-cart-button cta"
+            <a
+              href="/src/frost-peak-details.html"
+              class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="homepage-product-card">
             <img
-              src="rainydays-images/jacket2.jpg"
+              src="/src/rainydays-images/jacket2.jpg"
               alt="red pufferjacket"
               class="homepage-product-img"
             />
             <h3>Flex Athletic</h3>
-            <a href="coming-soon.html" class="add-to-cart-button cta"
+            <a href="/src/coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -97,23 +98,23 @@
         <div class="product-container">
           <div class="homepage-product-card">
             <img
-              src="rainydays-images/jacket3.jpg"
+              src="/src/rainydays-images/jacket3.jpg"
               alt="long, black rainjacket"
               class="homepage-product-img"
             />
             <h3>Frost Barrier</h3>
-            <a href="coming-soon.html" class="add-to-cart-button cta"
+            <a href="/src/coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="homepage-product-card">
             <img
-              src="rainydays-images/jacket4.jpg"
+              src="/src/rainydays-images/jacket4.jpg"
               alt="pink skiingjacket"
               class="homepage-product-img"
             />
             <h3>Polar Pulse</h3>
-            <a href="coming-soon.html" class="add-to-cart-button cta"
+            <a href="/src/coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
