--- a/src/coming-soon.html
+++ b/src/coming-soon.html
@@ -8,8 +8,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/coming-soon.css" rel="stylesheet" />
+    <link href="/src/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,24 +20,24 @@
     <nav class="homepage-nav">
       <ul>
         <li class="nav-list-item">
-          <a href="index.html"
+          <a href="/"
             ><span class="desktop-homepage-nav">Home</span
             ><i class="fa-thin fa-house nav-icon mobile-icon"></i
           ></a>
         </li>
         <li class="nav-list-item">
-          <a href="products-page.html">
+          <a href="/src/products-page.html">
             <span class="desktop-homepage-nav">Products</span
             ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
           ></a>
         </li>
         <li>
-          <a href="shopping-cart.html"
+          <a href="/src/shopping-cart.html"
             ><i class="fa-thin fa-bag-shopping nav-icon"></i
           ></a>
         </li>
         <li>
-          <a href="coming-soon.html"
+          <a href="/src/coming-soon.html"
             ><i class="fa-thin fa-magnifying-glass nav-icon"></i
           ></a>
         </li>
@@ -46,7 +45,7 @@
     </nav>
     <div class="orange-header">
       <img
-        src="rainydays-images/RainyDays_Logo.png"
+        src="/src/rainydays-images/RainyDays_Logo.png"
         alt="RainyDays logo"
         class="header-logo"
       />
