--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -5,7 +5,7 @@
     <meta name="description" content="This is your RainyDays shopping cart." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RainyDays | Shopping cart</title>
-    <link href="/src/css/style.css" rel="stylesheet" />
+    <link href="src/css/style.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
@@ -28,18 +28,18 @@
             ></a>
           </li>
           <li class="nav-list-item">
-            <a href="/src/products-page.html">
+            <a href="src/products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
           <li>
-            <a href="/src/shopping-cart.html"
+            <a href="src/shopping-cart.html"
               ><i class="fa-thin fa-bag-shopping nav-icon"></i
             ></a>
           </li>
           <li>
-            <a href="/src/coming-soon.html"
+            <a href="src/coming-soon.html"
               ><i class="fa-thin fa-magnifying-glass nav-icon"></i
             ></a>
           </li>
@@ -47,7 +47,7 @@
       </nav>
       <div class="orange-header">
         <img
-          src="/src/rainydays-images/RainyDays_Logo.png"
+          src="src/rainydays-images/RainyDays_Logo.png"
           alt="RainyDays logo"
           class="header-logo"
         />
@@ -59,7 +59,7 @@
         <p class="item-number">1 items in cart</p>
         <div class="in-cart">
           <img
-            src="/src/rainydays-images/jacket1.jpg"
+            src="src/rainydays-images/jacket1.jpg"
             alt="red jacket with zipper"
             class="checkout-product-img"
           />
@@ -80,10 +80,10 @@
         </div>
 
         <div class="checkout-continue">
-          <a href="/src/payment-details.html" class="pay-now-button cta"
+          <a href="src/payment-details.html" class="pay-now-button cta"
             >Pay now</a
           >
-          <a href="/src/products-page.html" class="continue"
+          <a href="src/products-page.html" class="continue"
             >Continue shopping</a
           >
         </div>
