--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <link href="/src/css/style.css" rel="stylesheet" />
+    <link href="src/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,18 +31,18 @@
             ></a>
           </li>
           <li class="nav-list-item">
-            <a href="/src/products-page.html">
+            <a href="src/products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
           <li>
-            <a href="/src/shopping-cart.html"
+            <a href="src/shopping-cart.html"
               ><i class="fa-thin fa-bag-shopping nav-icon"></i
             ></a>
           </li>
           <li>
-            <a href="/src/coming-soon.html"
+            <a href="src/coming-soon.html"
               ><i class="fa-thin fa-magnifying-glass nav-icon"></i
             ></a>
           </li>
@@ -50,7 +50,7 @@
       </nav>
       <a href="/" class="homepage-logo-container"
         ><img
-          src="/src/rainydays-images/RainyDays_Logo.png"
+          src="src/rainydays-images/RainyDays_Logo.png"
           alt="RainyDays logo"
           class="homepage-logo"
       /></a>
@@ -59,7 +59,7 @@
       <section class="sale-container">
         <div class="valentinesday-sale">
           <p class="text-sale">25% off on our Valentines day sale</p>
-          <a href="/src/coming-soon.html" class="sale-button cta">Go to sale</a>
+          <a href="src/coming-soon.html" class="sale-button cta">Go to sale</a>
         </div>
       </section>
 
@@ -68,25 +68,23 @@
         <div class="product-container">
           <div class="homepage-product-card">
             <img
-              src="/src/rainydays-images/jacket1.jpg"
+              src="src/rainydays-images/jacket1.jpg"
               alt="red jacket with zipper"
               class="homepage-product-img"
             />
             <h3>Frost Peak</h3>
-            <a
-              href="/src/frost-peak-details.html"
-              class="add-to-cart-button cta"
+            <a href="src/frost-peak-details.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="homepage-product-card">
             <img
-              src="/src/rainydays-images/jacket2.jpg"
+              src="src/rainydays-images/jacket2.jpg"
               alt="red pufferjacket"
               class="homepage-product-img"
             />
             <h3>Flex Athletic</h3>
-            <a href="/src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="src/coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -98,23 +96,23 @@
         <div class="product-container">
           <div class="homepage-product-card">
             <img
-              src="/src/rainydays-images/jacket3.jpg"
+              src="src/rainydays-images/jacket3.jpg"
               alt="long, black rainjacket"
               class="homepage-product-img"
             />
             <h3>Frost Barrier</h3>
-            <a href="/src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="src/coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="homepage-product-card">
             <img
-              src="/src/rainydays-images/jacket4.jpg"
+              src="src/rainydays-images/jacket4.jpg"
               alt="pink skiingjacket"
               class="homepage-product-img"
             />
             <h3>Polar Pulse</h3>
-            <a href="/src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="src/coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
