--- a/src/payment-details.html
+++ b/src/payment-details.html
@@ -8,7 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RainyDays | Checkout</title>
-    <link href="/src/css/style.css" rel="stylesheet" />
+    <link href="src/css/style.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
@@ -31,18 +31,18 @@
             ></a>
           </li>
           <li class="nav-list-item">
-            <a href="/src/products-page.html">
+            <a href="src/products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
           <li>
-            <a href="/src/shopping-cart.html"
+            <a href="src/shopping-cart.html"
               ><i class="fa-thin fa-bag-shopping nav-icon"></i
             ></a>
           </li>
           <li>
-            <a href="/src/coming-soon.html"
+            <a href="src/coming-soon.html"
               ><i class="fa-thin fa-magnifying-glass nav-icon"></i
             ></a>
           </li>
@@ -50,7 +50,7 @@
       </nav>
       <div class="orange-header">
         <img
-          src="/src/rainydays-images/RainyDays_Logo.png"
+          src="src/rainydays-images/RainyDays_Logo.png"
           alt="RainyDays logo"
           class="header-logo"
         />
@@ -198,9 +198,7 @@
                     alt="YippiPay payment solution"
                   />
                 </div>
-                <a
-                  href="/src/confirmation-page.html"
-                  class="checkout-button cta"
+                <a href="src/confirmation-page.html" class="checkout-button cta"
                   >Checkout</a
                 >
               </section>
@@ -214,7 +212,7 @@
             <p class="item-number">1 items in cart</p>
             <div class="in-cart">
               <img
-                src="/src/rainydays-images/jacket1.jpg"
+                src="src/rainydays-images/jacket1.jpg"
                 alt="red jacket with zipper"
                 class="checkout-product-img"
               />
