fixed links again

--- a/src/products-page.html
+++ b/src/products-page.html
@@ -8,7 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RainyDays | Products</title>
-    <link href="src/css/style.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
@@ -30,18 +30,18 @@
           ></a>
         </li>
         <li class="nav-list-item">
-          <a href="src/products-page.html">
+          <a href="./products-page.html">
             <span class="desktop-homepage-nav">Products</span
             ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
           ></a>
         </li>
         <li>
-          <a href="src/shopping-cart.html"
+          <a href="./shopping-cart.html"
             ><i class="fa-thin fa-bag-shopping nav-icon"></i
           ></a>
         </li>
         <li>
-          <a href="src/coming-soon.html"
+          <a href="./coming-soon.html"
             ><i class="fa-thin fa-magnifying-glass nav-icon"></i
           ></a>
         </li>
@@ -49,7 +49,7 @@
     </nav>
     <div class="orange-header">
       <img
-        src="src/rainydays-images/RainyDays_Logo.png"
+        src="./rainydays-images/RainyDays_Logo.png"
         alt="RainyDays logo"
         class="header-logo"
       />
@@ -61,100 +61,100 @@
       <section>
         <ul class="categories-list">
           <li class="category all-items">
-            <a href="src/products-page.html">All items</a>
+            <a href="./products-page.html">All items</a>
           </li>
-          <li class="category"><a href="src/coming-soon.html">Women</a></li>
-          <li class="category"><a href="src/coming-soon.html">Men</a></li>
-          <li class="sale"><a href="src/coming-soon.html">Sale</a></li>
+          <li class="category"><a href="./coming-soon.html">Women</a></li>
+          <li class="category"><a href="./coming-soon.html">Men</a></li>
+          <li class="sale"><a href="./coming-soon.html">Sale</a></li>
         </ul>
       </section>
       <section>
         <section class="products">
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket1.jpg"
+              src="./rainydays-images/jacket1.jpg"
               alt="red jacket with zipper"
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <a href="src/frost-peak-details.html" class="add-to-cart-button cta"
+            <a href="./frost-peak-details.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket2.jpg"
+              src="./rainydays-images/jacket2.jpg"
               alt="red pufferjacket"
               class="product-img"
             />
             <h3>Storm Flex Athletic</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket3.jpg"
+              src="./rainydays-images/jacket3.jpg"
               alt="long, black rainjacket"
               class="product-img"
             />
             <h3>Frost Barrier</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket4.jpg"
+              src="./rainydays-images/jacket4.jpg"
               alt="pink skiingjacket"
               class="product-img"
             />
             <h3>Polar Pulse</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket5.jpg"
+              src="./rainydays-images/jacket5.jpg"
               alt="red and black skiingjacket"
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket6.jpg"
+              src="./rainydays-images/jacket6.jpg"
               alt="teal softshelljacket"
               class="product-img"
             />
             <h3>Storm Flex Athletic</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket7.jpg"
+              src="./rainydays-images/jacket7.jpg"
               alt="red softshelljacket"
               class="product-img"
             />
             <h3>Frost Barrier</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
           <div class="product-card">
             <img
-              src="src/rainydays-images/jacket8.jpg"
+              src="./rainydays-images/jacket8.jpg"
               alt="green goretexjacket"
               class="product-img"
             />
             <h3>Polar Pulse</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
+            <a href="./coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
