--- a/src/coming-soon.html
+++ b/src/coming-soon.html
@@ -20,7 +20,7 @@
     <nav class="homepage-nav">
       <ul>
         <li class="nav-list-item">
-          <a href="/"
+          <a href="../index.html"
             ><span class="desktop-homepage-nav">Home</span
             ><i class="fa-thin fa-house nav-icon mobile-icon"></i
           ></a>
