--- a/src/frost-peak-details.html
+++ b/src/frost-peak-details.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./javascript/frost-peak-details.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -57,39 +58,7 @@
       </div>
     </header>
     <main>
-      <div class="main-box">
-        <img
-          src="./rainydays-images/jacket1.jpg"
-          alt="red jacket with zipper"
-          class="image-product-details"
-        />
-        <div class="product-info">
-          <h1>Frost Peak</h1>
-          <h2>1500 nok</h2>
-          <h3>Color:</h3>
-          <div class="color"></div>
-          <h3>Size:</h3>
-          <div class="size-selector">
-            <div class="size"><p>42</p></div>
-            <div class="size"><p>44</p></div>
-            <div class="size"><p>46</p></div>
-          </div>
-          <a href="./shopping-cart.html" class="add-to-cart-button cta"
-            >Add to cart</a
-          >
-          <h3>Description:</h3>
-          <p>
-            This sporty puffer jacket offers warmth, breathability, and
-            flexibility for active wear. Made from good quality down, it keeps
-            you dry and comfortable during workouts or outdoor activities. The
-            full-zip design allows for easy ventilation, while the ergonomic fit
-            ensures freedom of movement. Featuring zippered pockets for secure
-            storage and a sleek, athletic style, this jacket is perfect for
-            staying active or layering up for a casual look. Ideal for any sport
-            or outdoor adventure.
-          </p>
-        </div>
-      </div>
+      <div id="container" class="product-container"></div>
     </main>
   </body>
   <footer>
