--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
+    <script src="src/javascript/script.js" defer></script>
     <link href="src/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -64,60 +65,10 @@
       </section>
 
       <section class="new-collection">
-        <h1 class="h1-homepage">New collection</h1>
-        <div class="product-container">
-          <div class="homepage-product-card">
-            <img
-              src="src/rainydays-images/jacket1.jpg"
-              alt="red jacket with zipper"
-              class="homepage-product-img"
-            />
-            <h3>Frost Peak</h3>
-            <a href="src/frost-peak-details.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="homepage-product-card">
-            <img
-              src="src/rainydays-images/jacket2.jpg"
-              alt="red pufferjacket"
-              class="homepage-product-img"
-            />
-            <h3>Flex Athletic</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-        </div>
+        <h1 class="h1-homepage">All products</h1>
+        <div class="container" id="container"></div>
       </section>
 
-      <section class="bestsellers">
-        <h2>Bestsellers</h2>
-        <div class="product-container">
-          <div class="homepage-product-card">
-            <img
-              src="src/rainydays-images/jacket3.jpg"
-              alt="long, black rainjacket"
-              class="homepage-product-img"
-            />
-            <h3>Frost Barrier</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="homepage-product-card">
-            <img
-              src="src/rainydays-images/jacket4.jpg"
-              alt="pink skiingjacket"
-              class="homepage-product-img"
-            />
-            <h3>Polar Pulse</h3>
-            <a href="src/coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-        </div>
-      </section>
       <section class="subscribtion-container">
         <div class="subscribtion-img"></div>
         <form class="subscribtion-form">
