fixed anchor.href src for products

--- a/src/products-page.html
+++ b/src/products-page.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./javascript/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,96 +70,7 @@
         </ul>
       </section>
       <section>
-        <section class="products">
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket1.jpg"
-              alt="red jacket with zipper"
-              class="product-img"
-            />
-            <h3>Frost Peak</h3>
-            <a href="./frost-peak-details.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket2.jpg"
-              alt="red pufferjacket"
-              class="product-img"
-            />
-            <h3>Storm Flex Athletic</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket3.jpg"
-              alt="long, black rainjacket"
-              class="product-img"
-            />
-            <h3>Frost Barrier</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket4.jpg"
-              alt="pink skiingjacket"
-              class="product-img"
-            />
-            <h3>Polar Pulse</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket5.jpg"
-              alt="red and black skiingjacket"
-              class="product-img"
-            />
-            <h3>Frost Peak</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket6.jpg"
-              alt="teal softshelljacket"
-              class="product-img"
-            />
-            <h3>Storm Flex Athletic</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket7.jpg"
-              alt="red softshelljacket"
-              class="product-img"
-            />
-            <h3>Frost Barrier</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-          <div class="product-card">
-            <img
-              src="./rainydays-images/jacket8.jpg"
-              alt="green goretexjacket"
-              class="product-img"
-            />
-            <h3>Polar Pulse</h3>
-            <a href="./coming-soon.html" class="add-to-cart-button cta"
-              >Add to cart</a
-            >
-          </div>
-        </section>
+        <div class="container" id="container"></div>
       </section>
     </main>
   </body>
