--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="src/javascript/script.js" defer></script>
+    <script type="module" src="src/javascript/script.js" defer></script>
     <link href="src/css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -67,8 +67,12 @@
       <section class="new-collection">
         <h1 class="h1-homepage">All products</h1>
         <div class="container" id="container"></div>
+        <div class="cart">
+          <div class="cart-list"></div>
+          <div class="total">Total:</div>
+          <a href="shopping-cart.html">Checkout</a>
+        </div>
       </section>
-
       <section class="subscribtion-container">
         <div class="subscribtion-img"></div>
         <form class="subscribtion-form">
