--- a/src/products-page.html
+++ b/src/products-page.html
@@ -71,6 +71,11 @@
       </section>
       <section>
         <div class="container" id="container"></div>
+        <div class="cart">
+          <div class="cart-list"></div>
+          <div class="total">Total:</div>
+          <a href="shopping-cart.html">Checkout</a>
+        </div>
       </section>
     </main>
   </body>
