--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -10,6 +10,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./javascript/shopping.cart.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
