changes API fetch and import

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
       <section class="new-collection">
         <h1 class="h1-homepage">All products</h1>
-        <div class="container" id="container"></div>
+        <div class="product-container" id="container"></div>
         <div class="cart">
           <div class="cart-list"></div>
           <div class="total">Total:</div>
-          <a href="shopping-cart.html">Checkout</a>
+          <a href="src/shopping-cart.html">Checkout</a>
         </div>
       </section>
       <section class="subscribtion-container">
