--- a/src/products-page.html
+++ b/src/products-page.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./javascript/script.js" defer></script>
+    <script src="./javascript/script.js" defer type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -74,7 +74,7 @@
         <div class="cart">
           <div class="cart-list"></div>
           <div class="total">Total:</div>
-          <a href="shopping-cart.html">Checkout</a>
+          <a href="/src/shopping-cart.html">Checkout</a>
         </div>
       </section>
     </main>
