--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -54,37 +54,15 @@
         />
       </div>
     </header>
-    <main>
-      <div class="shopping-cart-container summary-container">
-        <h1>Shopping cart</h1>
-        <p class="item-number">1 items in cart</p>
-        <div class="in-cart">
-          <img
-            src="./rainydays-images/jacket1.jpg"
-            alt="red jacket with zipper"
-            class="checkout-product-img"
-          />
-          <div class="product-name-size-qty">
-            <p>Frost Peak</p>
-            <p>Size: 42</p>
-            <p>Qty: 1</p>
-          </div>
-          <p class="product-price">1500 nok</p>
-        </div>
-        <div class="summary-detail-box">
-          <p>Shipping</p>
-          <p>0 nok</p>
-        </div>
-        <div class="summary-detail-box">
-          <p>Total</p>
-          <p>1500 nok</p>
-        </div>
+    <main class="cart-page shopping-cart-container summary-container">
+      <h1>Shopping cart</h1>
+      <p class="item-number">items in cart</p>
+      <div class="cart-list"></div>
+      <div class="total"></div>
 
-        <div class="checkout-continue">
-          <a href="./payment-details.html" class="pay-now-button cta"
-            >Pay now</a
-          >
-          <a href="./products-page.html" class="continue">Continue shopping</a>
+      <div class="shopping-cart-container summary-container">
+        <div class="in-cart">
+          <div class="product-name-size-qty"></div>
         </div>
       </div>
     </main>
