filter products-page, quantity grouped in cart

--- a/src/products-page.html
+++ b/src/products-page.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./javascript/script.js" defer type="module"></script>
+    <script src="./javascript/products-page.js" defer type="module"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -60,14 +60,12 @@
     <main>
       <h1 class="h1-products-page">Products</h1>
       <section>
-        <ul class="categories-list">
-          <li class="category all-items">
-            <a href="./products-page.html">All items</a>
-          </li>
-          <li class="category"><a href="./coming-soon.html">Women</a></li>
-          <li class="category"><a href="./coming-soon.html">Men</a></li>
-          <li class="sale"><a href="./coming-soon.html">Sale</a></li>
-        </ul>
+        <div class="categories-list">
+          <button id="filter-all">All items</button>
+          <button id="filter-women">Women</button>
+          <button id="filter-men">Men</button>
+          <button id="filter-sale">Sale</button>
+        </div>
       </section>
       <section>
         <div class="container" id="container"></div>
