--- a/src/products-page.html
+++ b/src/products-page.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./javascript/products-page.js" defer type="module"></script>
+    <script src="./javascript/shopping-cart.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
