--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           <li class="nav-list-item">
             <a href="src/products-page.html">
               <span class="desktop-homepage-nav">Products</span
-              ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
-            ></a>
+              ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon" ></i>
           </li>
           <li>
             <a href="src/shopping-cart.html"
@@ -67,7 +66,7 @@
       <section class="new-collection">
         <h1 class="h1-homepage">All products</h1>
         <div class="product-container" id="container"></div>
-        <div class="cart">
+        <div>
           <div class="cart-list"></div>
           <div class="total">Total:</div>
           <a href="src/shopping-cart.html">Checkout</a>
