--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./javascript/shopping.cart.js" defer></script>
+    <script type="module" src="./javascript/shopping-cart.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -56,14 +56,10 @@
     </header>
     <main class="cart-page shopping-cart-container summary-container">
       <h1>Shopping cart</h1>
-      <p class="item-number">items in cart</p>
-      <div class="cart-list"></div>
-      <div class="total"></div>
-
-      <div class="shopping-cart-container summary-container">
-        <div class="in-cart">
-          <div class="product-name-size-qty"></div>
-        </div>
+      <div class="summary-container">
+        <p class="item-number">items in cart</p>
+        <div class="cart-list"></div>
+        <div class="total"></div>
       </div>
     </main>
   </body>
