--- a/src/confirmation-page.html
+++ b/src/confirmation-page.html
@@ -9,8 +9,8 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./javascript/products-page.js" defer type="module"></script>
-    <script src="./javascript/shopping-cart.js" defer></script>
+    <script type="module" src="./javascript/script.js" defer></script>
+    <script src="./javascript/confirmation.js" type="module"></script>
     <link href="./css/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,10 +35,18 @@
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
-            <a href="./shopping-cart.html"
-              ><i class="fa-thin fa-bag-shopping nav-icon"></i
-            ></a>
+          <li class="cart-dropdown-container">
+            <button
+              class="cart-toggle-btn"
+              id="cart-toggle"
+              aria-label="toggle shopping cart"
+            >
+              <i class="fa-thin fa-bag-shopping nav-icon"></i>
+            </button>
+            <div class="cart-dropdown hidden" aria-hidden="true">
+              <div class="cart-list"></div>
+              <div class="total"></div>
+            </div>
           </li>
           <li>
             <a href="./coming-soon.html"
@@ -60,16 +68,18 @@
       <section class="box">
         <div class="information-container">
           <h2>Order information</h2>
-          <p>Order number: 56-322-45</p>
-          <p>Order total: 1500 nok</p>
-          <p>Expected delivery date: 04.05.25</p>
-          <p>Order confirmation and receipt will be sent to your email.</p>
-          <p>Welcome back next time!</p>
+          <p>Your order is confirmed.</p>
         </div>
         <div class="cart">
-          <div class="cart-list"></div>
-          <div class="total">Total:</div>
-          <a href="/src/shopping-cart.html">Checkout</a>
+          <p class="order-summary-p">Order summary</p>
+          <div class="cart-list-page"></div>
+          <div class="total-page">Total:</div>
+          <button
+            class="clear-local-storage-btn pay-now-button cta"
+            id="clear-local-storage-btn"
+          >
+            Back to home
+          </button>
         </div>
       </section>
     </main>
