--- a/src/frost-peak-details.html
+++ b/src/frost-peak-details.html
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./javascript/script.js" defer></script>
     <script src="./javascript/frost-peak-details.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,10 +38,18 @@
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
-            <a href="./shopping-cart.html"
-              ><i class="fa-thin fa-bag-shopping nav-icon"></i
-            ></a>
+          <li class="cart-dropdown-container">
+            <button
+              class="cart-toggle-btn"
+              id="cart-toggle"
+              aria-label="toggle shopping cart"
+            >
+              <i class="fa-thin fa-bag-shopping nav-icon"></i>
+            </button>
+            <div class="cart-dropdown hidden" aria-hidden="true">
+              <div class="cart-list"></div>
+              <div class="total"></div>
+            </div>
           </li>
           <li>
             <a href="./coming-soon.html"
@@ -58,7 +67,7 @@
       </div>
     </header>
     <main>
-      <div id="container" class="product-container"></div>
+      <div id="productDetailsContainer" class="product-container"></div>
     </main>
   </body>
   <footer>
