--- a/src/payment-details.html
+++ b/src/payment-details.html
@@ -13,8 +13,8 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./javascript/products-page.js" defer type="module"></script>
-    <script src="./javascript/shopping-cart.js" defer></script>
+    <script type="module" src="./javascript/script.js" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,10 +38,18 @@
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
-            <a href="./shopping-cart.html"
-              ><i class="fa-thin fa-bag-shopping nav-icon"></i
-            ></a>
+          <li class="cart-dropdown-container">
+            <button
+              class="cart-toggle-btn"
+              id="cart-toggle"
+              aria-label="toggle shopping cart"
+            >
+              <i class="fa-thin fa-bag-shopping nav-icon"></i>
+            </button>
+            <div class="cart-dropdown hidden" aria-hidden="true">
+              <div class="cart-list"></div>
+              <div class="total"></div>
+            </div>
           </li>
           <li>
             <a href="./coming-soon.html"
@@ -211,9 +219,8 @@
         <section>
           <h2>Order summary</h2>
           <div class="cart">
-            <div class="cart-list"></div>
-            <div class="total">Total:</div>
-            <a href="/src/shopping-cart.html">Checkout</a>
+            <div class="cart-list-page payment-details-cart"></div>
+            <div class="total-page">Total:</div>
           </div>
         </section>
       </div>
