--- a/src/products-page.html
+++ b/src/products-page.html
@@ -13,8 +13,9 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./javascript/products-page.js" defer type="module"></script>
-    <script src="./javascript/shopping-cart.js" defer></script>
+    <script type="module" src="./javascript/script.js" defer></script>
+    <script type="module" src="./javascript/products-page.js" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,10 +38,18 @@
             ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
           ></a>
         </li>
-        <li>
-          <a href="./shopping-cart.html"
-            ><i class="fa-thin fa-bag-shopping nav-icon"></i
-          ></a>
+        <li class="cart-dropdown-container">
+          <button
+            class="cart-toggle-btn"
+            id="cart-toggle"
+            aria-label="toggle shopping cart"
+          >
+            <i class="fa-thin fa-bag-shopping nav-icon"></i>
+          </button>
+          <div class="cart-dropdown hidden" aria-hidden="true">
+            <div class="cart-list"></div>
+            <div class="total"></div>
+          </div>
         </li>
         <li>
           <a href="./coming-soon.html"
@@ -62,19 +71,15 @@
       <h1 class="h1-products-page">Products</h1>
       <section>
         <div class="categories-list">
-          <button id="filter-all">All items</button>
-          <button id="filter-women">Women</button>
-          <button id="filter-men">Men</button>
-          <button id="filter-sale">Sale</button>
+          <button class="category active" id="filter-all">All items</button>
+          <button class="category" id="filter-women">Women</button>
+          <button class="category" id="filter-men">Men</button>
+          <button class="sale category" id="filter-sale">Sale</button>
         </div>
       </section>
       <section>
         <div class="container" id="container"></div>
-        <div class="cart">
-          <div class="cart-list"></div>
-          <div class="total">Total:</div>
-          <a href="/src/shopping-cart.html">Checkout</a>
-        </div>
+        <div class="cart"></div>
       </section>
     </main>
   </body>
