--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/9cf112f2f4.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./javascript/shopping-cart.js" defer></script>
+    <script type="module" src="./javascript/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,10 +34,18 @@
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
-            <a href="./shopping-cart.html"
-              ><i class="fa-thin fa-bag-shopping nav-icon"></i
-            ></a>
+          <li class="cart-dropdown-container">
+            <button
+              class="cart-toggle-btn"
+              id="cart-toggle"
+              aria-label="toggle shopping cart"
+            >
+              <i class="fa-thin fa-bag-shopping nav-icon"></i>
+            </button>
+            <div class="cart-dropdown hidden" aria-hidden="true">
+              <div class="cart-list"></div>
+              <div class="total"></div>
+            </div>
           </li>
           <li>
             <a href="./coming-soon.html"
@@ -58,8 +66,8 @@
       <h1>Shopping cart</h1>
       <div class="summary-container">
         <p class="item-number">items in cart</p>
-        <div class="cart-list"></div>
-        <div class="total"></div>
+        <div class="cart-list-page"></div>
+        <div class="total-page"></div>
       </div>
     </main>
   </body>
