adding function for order summary in confirmation-page.html

--- a/src/confirmation-page.html
+++ b/src/confirmation-page.html
@@ -72,8 +72,10 @@
         </div>
         <div class="cart">
           <p class="order-summary-p">Order summary</p>
-          <div class="cart-list-page"></div>
-          <div class="total-page">Total:</div>
+          <div class="confirmation-container" id="confirmation">
+            <div class="confirmation-order-summary"></div>
+            <div class="confirmation-total"></div>
+          </div>
           <button
             class="clear-local-storage-btn pay-now-button cta"
             id="clear-local-storage-btn"
