--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -62,12 +62,14 @@
         />
       </div>
     </header>
-    <main class="cart-page shopping-cart-container summary-container">
-      <h1>Shopping cart</h1>
-      <div class="summary-container">
-        <p class="item-number">items in cart</p>
-        <div class="cart-list-page"></div>
-        <div class="total-page"></div>
+    <main>
+      <div class="cart-page shopping-cart-container summary-container">
+        <h1>Shopping cart</h1>
+        <div class="summary-container">
+          <p class="item-number">items in cart</p>
+          <div class="cart-list-page"></div>
+          <div class="total-page"></div>
+        </div>
       </div>
     </main>
   </body>
