styling changes product details page

--- a/src/frost-peak-details.html
+++ b/src/frost-peak-details.html
@@ -67,7 +67,7 @@
       </div>
     </header>
     <main>
-      <div id="productDetailsContainer" class="product-container"></div>
+      <div id="productDetailsContainer"></div>
     </main>
   </body>
   <footer>
