linked up addToCart function with product-details-page

--- a/src/frost-peak-details.html
+++ b/src/frost-peak-details.html
@@ -14,7 +14,11 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="./javascript/script.js" defer></script>
-    <script src="./javascript/frost-peak-details.js" defer></script>
+    <script
+      type="module"
+      src="./javascript/frost-peak-details.js"
+      defer
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
