added cart counter to cart icon in navigation on all pages

--- a/src/frost-peak-details.html
+++ b/src/frost-peak-details.html
@@ -54,6 +54,7 @@
               aria-label="toggle shopping cart"
             >
               <i class="fa-thin fa-bag-shopping nav-icon"></i>
+              <span class="cart-count" hidden>0</span>
             </button>
             <div class="cart-dropdown hidden" aria-hidden="true">
               <div class="cart-list"></div>
